Fix IE tester z-index

--- a/css/typesetter.css
+++ b/css/typesetter.css
@@ -1,5 +1,9 @@
 /* controls */
 
+#controls {
+    position: relative;
+    z-index: 1;
+}
 
 #background-controls li {
     list-style-type: none;
@@ -33,8 +37,10 @@ form > fieldset + fieldset {
 /* preview box */
 
 #preview {
+    position: relative;
     display: block;
     background-color: transparent;
+    z-index: 0;
 }
 
 #preview .background.layer {
